gateway/overlays/oci/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: staging-cluster-issuer
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.19871506.xyz"
    allowedRoutes:
      namespaces:
        from: All
